--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <a href="">Resume</a>
                 <a href="">About Me</a>
-                <a href="">My Blog</a>
+                <a href="https://medium.com/@magencrawford">My Blog</a>
                 <a class="has-border" href="">Contact Me</a>
             </nav>
         </header>
