--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
   <title>My Portfolio</title>
 </head>
-  <body>
+  <body class="container">
         <header>
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
-                <a href="">Resume</a>
+                <a href="src/resume.html">Resume</a>
                 <a href="">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
                 <a class="has-border" href="">Contact Me</a>
             </nav>
         </header>
-7yb7yhb
         <main>
         <img src="myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
