--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href = '';">Portfolio</button>
+        <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
 
         <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>  
         </main>
