--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -10,5 +10,6 @@
     <h1>Portfolio</h1>
     <a href="dashboard.html">Dashboard</a>
     <a href="nasa.html">Nasa Landing Page</a>
+    <a href="hairLandingPage.html">Hair Landing Page</a>
 </body>
 </html>
