final hair changes

--- a/src/hairLandingPage.html
+++ b/src/hairLandingPage.html
@@ -16,26 +16,40 @@
   <body>
     <header>
       <img src="/images/logo.jpg" alt="" class="logo" />
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="#" class="home">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section id="beacon">
         <img src="/images/the-beacon.jpg" alt="" class="sunglass" />
-        <p class="beacon">The Beacon to all mankind</p>
-        <p>Our website templates are created with</p>
-        <p>inpiration, checked for quality and originality</p>
-        <p>and meticulously sliced and coded.</p>
-        <button>READ MORE</button>
+        <div class="text-block">
+          <p class="beacon">The Beacon to all mankind</p>
+          <p class="first">Our website templates are created with</p>
+          <p class="second">inpiration, checked for quality and originality</p>
+          <p class="third">and meticulously sliced and coded.</p>
+          <button>READ MORE</button>
+        </div>
       </section>
       <section class="container">
-        <img src="/images/the-father.jpg" alt="" class="trio" />
-        <img src="/images/the-actor.jpg" alt="" class="trio" />
-        <img src="/images/the-nerd.jpg" alt="" class="trio" />
-      </section>
-      <section class="nerd">
-        <p>the father</p>
-        <p>the actor</p>
-        <p>the nerd</p>
+        <div class="item">
+          <img src="/images/the-father.jpg" alt="" class="trio" />
+          <p class="nerd">the father</p>
+        </div>
+        <div class="item">
+          <img src="/images/the-actor.jpg" alt="" class="trio" />
+          <p class="nerd">the actor</p>
+        </div>
+        <div class="item">
+          <img src="/images/the-nerd.jpg" alt="" class="trio" />
+          <p class="nerd">the nerd</p>
+        </div>
       </section>
     </main>
     <footer>
