--- a/src/index.html
+++ b/src/index.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <title>My Portfolio</title>
 </head>
   <body class="container">
         <header>
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
-                <a href="src/resume.html">Resume</a>
+                <a href="resume.html">Resume</a>
                 <a href="">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
                 <a class="has-border" href="">Contact Me</a>
             </nav>
         </header>
         <main>
-        <img src="myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
+        <img src="/images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
+        <button onclick="window.location.href ='portfolio.html'">Portfolio</button>
 
         <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>  
         </main>
