--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
-                <a href="resume.html">Resume</a>
+                <a href="/src/resume.html">Resume</a>
                 <a href="">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
                 <a class="has-border" href="">Contact Me</a>
@@ -21,7 +21,7 @@
         <img src="/images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href ='portfolio.html'">Portfolio</button>
+        <button onclick="window.location.href ='/src/portfolio.html'">Portfolio</button>
 
         <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>  
         </main>
