--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>My Portfolio</title>
 </head>
   <body class="container">
@@ -18,10 +18,10 @@
             </nav>
         </header>
         <main>
-        <img src="/images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
+        <img src="images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href ='/src/portfolio.html'">Portfolio</button>
+        <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
 
         <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>  
         </main>
