--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
             <nav>
-                <a href="/src/resume.html">Resume</a>
+                <a href="src/resume.html">Resume</a>
                 <a href="">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
                 <a class="has-border" href="">Contact Me</a>
