--- a/src/hairLandingPage.html
+++ b/src/hairLandingPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/hair.css" />
+    <link rel="stylesheet" href="styles/hair.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.jpg" alt="" class="logo" />
+      <img src="images/logo.jpg" alt="" class="logo" />
       <nav>
         <ul>
           <li><a href="#" class="home">Home</a></li>
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section id="beacon">
-        <img src="/images/the-beacon.jpg" alt="" class="sunglass" />
+        <img src="images/the-beacon.jpg" alt="" class="sunglass" />
         <div class="text-block">
           <p class="beacon">The Beacon to all mankind</p>
           <p class="first">Our website templates are created with</p>
@@ -39,15 +39,15 @@
       </section>
       <section class="container">
         <div class="item">
-          <img src="/images/the-father.jpg" alt="" class="trio" />
+          <img src="images/the-father.jpg" alt="" class="trio" />
           <p class="nerd">the father</p>
         </div>
         <div class="item">
-          <img src="/images/the-actor.jpg" alt="" class="trio" />
+          <img src="images/the-actor.jpg" alt="" class="trio" />
           <p class="nerd">the actor</p>
         </div>
         <div class="item">
-          <img src="/images/the-nerd.jpg" alt="" class="trio" />
+          <img src="images/the-nerd.jpg" alt="" class="trio" />
           <p class="nerd">the nerd</p>
         </div>
       </section>
