--- a/src/nasa.html
+++ b/src/nasa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/nasa.css" />
+    <link rel="stylesheet" href="styles/nasa.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Anton&display=swap"
       rel="stylesheet"
