--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
   <body class="container">
         <header>
-            <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
+            <!-- <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo"> -->
             <nav>
                 <a href="src/resume.html">Resume</a>
-                <a href="">About Me</a>
+                <a href="src/about.html">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
-                <a class="has-border" href="">Contact Me</a>
+                <a class="has-border" href="src/contact.html">Contact Me</a>
             </nav>
         </header>
         <main>
@@ -23,7 +23,7 @@
         <h2>Student of Web Development</h2>
         <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
 
-        <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>  
+        <!-- <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>   -->
         </main>
   
   </body>
