--- a/src/about.html
+++ b/src/about.html
@@ -22,5 +22,30 @@
         <a href="contact.html">Contact Me</a>
       </div>
     </div>
+    <h2>My Passion</h2>
+    <blockquote>
+      The Web as I envisaged it, we have not seen it yet. The future is still so
+      much bigger than the past. <br />
+      <small
+        ><b><u>Tim Berners-Lee</u>, Inventor of the World Wide Web.</b></small
+      >
+    </blockquote>
+    <h2>About Me</h2>
+    <p>
+      <big>Lorem</big> ipsum dolor sit amet consectetur adipisicing elit.
+      Maiores tenetur architecto, cupiditate explicabo doloribus, provident
+      molestias, aliquid delectus impedit <del>repellat</del>
+      <ins>Repellat</ins> tempora! Laborum numquam neque deserunt ab ut
+      voluptatem deleniti libero!
+    </p>
+    <hr />
+    <h3>Lorem</h3>
+    <ul>
+      <li>Ipsum</li>
+      <li>Dolor</li>
+      <li>Sit</li>
+      <li>Amet</li>
+      <li>14<sup>th</sup></li>
+    </ul>
   </body>
 </html>
