--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="styles/index-style.css">
   <title>My Portfolio</title>
 </head>
   <body class="container">
         <header>
             <!-- <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo"> -->
-            <nav>
+            <nav class="animated fadeInDown">
                 <a href="src/resume.html">Resume</a>
                 <a href="src/about.html">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
@@ -18,10 +19,11 @@
             </nav>
         </header>
         <main>
-        <img src="images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
-        <h1>Magen Crawford</h1>
+        <h1 class="animated hinge delay-3s">Hellooooo!</h1>
+        <img src="images/myProfilePic.jpg" class="animated rollIn" id="profile-pic" alt="Head shot of Me">
+        <h1 class="animated wobble">Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
+        <button onclick="window.location.href ='src/portfolio.html'" class="animated jello">Portfolio</button>
 
         <!-- <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>   -->
         </main>
