--- a/src/contact.html
+++ b/src/contact.html
@@ -23,19 +23,38 @@
       </div>
     </div>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae voluptate
-      quod laboriosam, necessitatibus nemo ipsam quidem distinctio quas non
-      consequatur at impedit? Impedit atque voluptates officiis suscipit sequi
-      est unde.
+      <strong>Lorem</strong> ipsum dolor sit amet, consectetur adipisicing elit.
+      Quae voluptate quod laboriosam, necessitatibus <del>nemo</del>
+      <ins>Nemo</ins> ipsam quidem distinctio quas non consequatur at impedit?
+      Impedit atque voluptates officiis suscipit sequi est <u>unde</u>.
     </p>
     <hr />
-    <pre>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ipsam. Eius architecto provident ratione, enim similique officiis hic optio aliquid deserunt excepturi dignissimos ducimus nulla amet explicabo blanditiis pariatur quidem.</pre
-    >
     <address>
       1234 Congress Ave <br />
       Austin, TX 78745 <br />
       USA
     </address>
+    <form action="">
+      <fieldset>
+        <legend>Contact Me</legend>
+        <input type="email" placeholder="Email" /> <br />
+        <input type="text" placeholder="Name" /> <br />
+        <textarea
+          name="Message"
+          id=""
+          cols="30"
+          rows="5"
+          placeholder="Message"
+        ></textarea>
+        <br />
+        <input type="submit" value="Submit" />
+      </fieldset>
+    </form>
+    <blockquote>
+      <big>Technology is best when it brings people together.</big> <br />
+      <b
+        ><small><em>Matt Mullenweg, Social Media Entrepreneur</em></small></b
+      >
+    </blockquote>
   </body>
 </html>
