--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
   <body>
     <div class="header">
       <h1>Magen Crawford</h1>
-      <a href="about.html" class="active">About Me</a>
+      <a href="about.html" class="active" id="right">About Me</a>
       <div class="navbar">
         <a href="resume.html">Resume</a>
         <a href="portfolio.html">Portfolio</a>
@@ -22,22 +22,45 @@
         <a href="contact.html">Contact Me</a>
       </div>
     </div>
-    <h2>My Passion</h2>
-    <blockquote>
-      The Web as I envisaged it, we have not seen it yet. The future is still so
-      much bigger than the past. <br />
-      <small
-        ><b><u>Tim Berners-Lee</u>, Inventor of the World Wide Web.</b></small
-      >
-    </blockquote>
-    <h2>About Me</h2>
-    <p>
-      <big>Lorem</big> ipsum dolor sit amet consectetur adipisicing elit.
-      Maiores tenetur architecto, cupiditate explicabo doloribus, provident
-      molestias, aliquid delectus impedit <del>repellat</del>
-      <ins>Repellat</ins> tempora! Laborum numquam neque deserunt ab ut
-      voluptatem deleniti libero!
-    </p>
+    <div class="wrapper">
+      <div class="passion">
+        <h2>My Passion</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget dolor
+          morbi non arcu risus quis. Non sodales neque sodales ut etiam. Nisi
+          est sit amet facilisis magna etiam. At volutpat diam ut venenatis
+          tellus in metus vulputate eu. Pulvinar pellentesque habitant morbi
+          tristique. Scelerisque viverra mauris in aliquam sem. Eu non diam
+          phasellus vestibulum lorem sed risus ultricies tristique. Ut morbi
+          tincidunt augue interdum velit euismod in pellentesque. Pellentesque
+          nec nam aliquam sem et. Nulla pellentesque dignissim enim sit amet
+          venenatis. Augue eget arcu dictum varius duis at consectetur lorem
+          donec. Sapien eget mi proin sed libero enim sed. Pretium viverra
+          suspendisse potenti nullam ac tortor vitae
+        </p>
+        <blockquote>
+          The Web as I envisaged it, we have not seen it yet. The future is
+          still so much bigger than the past. <br />
+          <small
+            ><b
+              ><u>Tim Berners-Lee</u>, Inventor of the World Wide Web.</b
+            ></small
+          >
+        </blockquote>
+      </div>
+
+      <div class="intro">
+        <h2>About Me</h2>
+        <p>
+          <big>Lorem</big> ipsum dolor sit amet consectetur adipisicing elit.
+          Maiores tenetur architecto, cupiditate explicabo doloribus, provident
+          molestias, aliquid delectus impedit <del>repellat</del>
+          <ins>Repellat</ins> tempora! Laborum numquam neque deserunt ab ut
+          voluptatem deleniti libero!
+        </p>
+      </div>
+    </div>
     <hr />
     <h3>Lorem</h3>
     <ul>
