--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -24,6 +24,7 @@
       <a href="dashboard.html">Dashboard</a>
       <a href="nasa.html">Nasa Landing Page</a>
       <a href="hairLandingPage.html">Hair Landing Page</a>
+      <a href="transition-squares.html">Moving Boxes</a>
     </div>
     <div class="dogs">
       <iframe
