--- a/checkpoint2/aboutbacon.html
+++ b/checkpoint2/aboutbacon.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="styles/aboutbacon.css" />
   </head>
   <body>
-    <h1>About Us</h1>
+    <div class="top">
+      <ul>
+        <li><a href="baconipsum.html" class="active">Home</a></li>
+        <li><a href="articles.html">Articles</a></li>
+      </ul>
+    </div>
+    <div class="about">
+      <h1>About Us</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Fermentum odio eu
+        feugiat pretium nibh ipsum. Diam vel quam elementum pulvinar etiam.
+        Facilisis sed odio morbi quis commodo odio aenean sed adipiscing. Ipsum
+        consequat nisl vel pretium lectus. Nisi quis eleifend quam adipiscing
+        vitae. Vitae justo eget magna fermentum iaculis eu non diam. In vitae
+        turpis massa sed elementum. Purus semper eget duis at tellus. Viverra
+        adipiscing at in tellus integer feugiat scelerisque varius. Tortor at
+        risus viverra adipiscing. Feugiat nisl pretium fusce id. Amet porttitor
+        eget dolor morbi non arcu risus. Ultrices dui sapien eget mi proin sed
+        libero. Magnis dis parturient montes nascetur ridiculus mus mauris.
+      </p>
+    </div>
+    <iframe
+      width="480"
+      height="315"
+      aria-placeholder="bacon.jpg"
+      src="https://www.youtube.com/embed/yjDpBnPuCnM"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
