--- a/checkpoint2/articles.html
+++ b/checkpoint2/articles.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Article</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../animate.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lobster&display=swap"
@@ -13,6 +17,12 @@
     <link rel="stylesheet" href="styles/article.css" />
   </head>
   <body>
+    <div class="top">
+      <ul>
+        <li><a href="baconipsum.html" class="active">Home</a></li>
+        <li><a href="aboutbacon.html">About us</a></li>
+      </ul>
+    </div>
     <h1 class="animated flash delay-0.5s">Article Page</h1>
     <div class="bottom">
       <div class="bacon">
