--- a/checkpoint2/baconipsum.html
+++ b/checkpoint2/baconipsum.html
@@ -26,14 +26,21 @@
         <li><i class="fab fa-facebook-square"></i></li>
       </ul>
     </div>
-    <div class="middle">
-      <h2>W</h2>
-      <h2>E</h2>
-      <h2>L</h2>
-      <h2>C</h2>
-      <h2>O</h2>
-      <h2>M</h2>
-      <h2>E</h2>
+    <div class="welcome">
+      <div id="welcome">
+        <h2>W</h2>
+        <h2>E</h2>
+        <h2>L</h2>
+        <h2>C</h2>
+        <h2>O</h2>
+        <h2>M</h2>
+        <h2>E</h2>
+        <br>
+      </div>
+      <div id="in">
+        <h2>I</h2>
+        <h2>N</h2>
+      </div>
     </div>
     <div class="bottom">
       <div class="bacon">
