--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -25,6 +25,7 @@
       <a href="nasa.html">Nasa Landing Page</a>
       <a href="hairLandingPage.html">Hair Landing Page</a>
       <a href="transition-squares.html">Moving Boxes</a>
+      <a href="../checkpoint2/baconipsum.html">Bacon Landing Page</a>
     </div>
     <div class="dogs">
       <iframe
