--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="container">
         <header>
             <!-- <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo"> -->
-            <nav class="animated fadeInDown">
+            <nav>
                 <a href="src/resume.html">Resume</a>
                 <a href="src/about.html">About Me</a>
                 <a href="https://medium.com/@magencrawford">My Blog</a>
@@ -19,11 +19,11 @@
             </nav>
         </header>
         <main>
-        <h1 class="animated hinge delay-3s">Hellooooo!</h1>
+        <h1 id="hello" class="animated hinge delay-3s">Hellooooo!</h1>
         <img src="images/myProfilePic.jpg" class="animated rollIn" id="profile-pic" alt="Head shot of Me">
-        <h1 class="animated wobble">Magen Crawford</h1>
+        <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
-        <button onclick="window.location.href ='src/portfolio.html'" class="animated jello">Portfolio</button>
+        <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
 
         <!-- <a class="small-text" href="https://austincodingacademy.com/"></a>© Austin Coding Academy</a>   -->
         </main>
