--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             </nav>
         </header>
         <main>
-        <h1 id="hello" class="animated hinge delay-3s">Hellooooo!</h1>
-        <img src="images/myProfilePic.jpg" class="animated rollIn" id="profile-pic" alt="Head shot of Me">
+        <img src="images/myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1>Magen Crawford</h1>
         <h2>Student of Web Development</h2>
         <button onclick="window.location.href ='src/portfolio.html'">Portfolio</button>
